--- a/vlookup/vlookup.ipynb
+++ b/vlookup/vlookup.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "## Answer\n",
     "\n",
-    "If we do a ___VLOOKUP___ in excel, we'd get _Diane_ as the anwer."
+    "If we do a ___VLOOKUP___ in Excel, we'd get _Diane_ as the answer."
    ]
   },
   {
@@ -155,15 +155,11 @@
    "id": "2c7f1aeb",
    "metadata": {},
    "source": [
-    "__FORMULA:__ =VLOOKUP(lookup_value,table_array,col_index_num)\n",
-    "\n",
     "Using the ___VLOOKUP___ formula, we know that our:\n",
     "\n",
-    "___lookup_value___ is _4_\n",
-    "\n",
-    "___col_index_num___ is _2_ using the\n",
-    "\n",
-    "___table_array___ columns from ___Name___ to ___Number___"
+    "- ___lookup_value___ is _4_\n",
+    "- ___col_index_num___ is _2_ using the\n",
+    "- ___table_array___ columns from ___Number___ to ___Name___"
    ]
   },
   {
@@ -466,7 +462,7 @@
     "\n",
     "From the output above, the _index_ we are looking for is _index_ _3_.\n",
     "\n",
-    "_Index_ is the one on the left side of the output. It's like the row number but counted from zero."
+    "_Index_ is the one on the left side of the output. It's like Excel's row number but counted from zero."
    ]
   },
   {
@@ -528,7 +524,7 @@
    "id": "0a287ae6",
    "metadata": {},
    "source": [
-    "And because we have mutiple instances of our `lookup_value`, we just need to get the first one, same as Excel's ___VLOOKUP___."
+    "And because we have multiple instances of our matched `lookup_value`, we just need to get the first one, the same as Excel's ___VLOOKUP___."
    ]
   },
   {
@@ -566,9 +562,9 @@
    "id": "4528a4b4",
    "metadata": {},
    "source": [
-    "### Step 6 - Get the answer we are looking for.\n",
+    "### Step 6 - Get the answer that we are looking for.\n",
     "\n",
-    "Because we already got the _index_ of the column where we look or the `lookup_value`, we just need to use that _index_ to get the value that we are looking for."
+    "Because we already got the _index_ of the column where we look for the `lookup_value`, we just need to use that _index_ to get the value that we are looking for."
    ]
   },
   {
@@ -597,7 +593,7 @@
    "id": "a1b45378",
    "metadata": {},
    "source": [
-    "Now that we are got our answer. Let's combine all what we've done to create a Python ___VLOOKUP___ function"
+    "Now that we got our answer. Let's combine all what we've done to create a Python ___VLOOKUP___ function"
    ]
   },
   {
@@ -660,7 +656,7 @@
    "id": "5f167058",
    "metadata": {},
    "source": [
-    "If you use ___VLOOKUP___ _(what are you doing with Excel if you don't? Lol)_, I'm sure that you observed that there's something missing in our formula. In Excel's ___VLOOKUP___ formula, we have to put _True_ or _False_ after _col_index_num_ to indicate whether we are looking for _Approximate Match_ or _Exact Match_. I explicitly removed that from our Python function. Thus, it always retrieve the _Exact Match_."
+    "If you use ___VLOOKUP___ _(what are you doing with Excel if you don't? Lol)_, I'm sure that you observed that there's something missing in our formula. In Excel's ___VLOOKUP___ formula, we have to put _True_ or _False_ after _col_index_num_ to indicate whether we are looking for _Approximate Match_ or _Exact Match_. I explicitly removed that from our Python function. Thus, it always retrieves the _Exact Match_."
    ]
   }
  ],
